<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="Home" />
        <item
            android:id="@+id/psi"
            android:title="PSI" />
        <item
            android:id="@+id/PM25"
            android:title="PM25" />

    </group>

</menu>
