<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.world.jasonloh95.evironmentreader.PM25">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:text="@string/last_result"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        tools:layout_editor_absoluteX="154dp"
        tools:layout_editor_absoluteY="94dp" />

    <TableLayout
        android:layout_width="256dp"
        android:layout_height="242dp"
        android:layout_gravity="center"
        android:stretchColumns="1"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="132dp">

        <TableRow
            android:layout_width="355dp"
            android:layout_height="48dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/cell_shape"
                android:padding="3dip"
                android:text="@string/region"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape"
                android:gravity="end"
                android:padding="3dip"
                android:text="@string/pm25_hourly"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/national"
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape2"
                android:padding="3dip"
                android:text="@string/national"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/national1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape2"
                android:gravity="end"
                android:padding="3dip"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/south"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape2"
                android:padding="3dip"
                android:text="@string/south"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/south1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape2"
                android:gravity="end"
                android:padding="3dip"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/north"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape2"
                android:padding="3dip"
                android:text="@string/north"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/north1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape2"
                android:gravity="end"
                android:padding="3dip"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/east"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape2"
                android:padding="3dip"
                android:text="@string/east"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/east1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape2"
                android:gravity="end"
                android:padding="3dip"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="15dp">

            <TextView
                android:id="@+id/west"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape2"
                android:padding="3dip"
                android:text="@string/west"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/west1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape2"
                android:gravity="end"
                android:padding="3dip"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/refresh"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="382dp" />

</LinearLayout>
